# sweetpaste

./: .gitignore  Cargo.toml  README.md  config.example.toml  sqlx-data.json
migrations/: 20210818213625_pastes.sql
src/: cache.rs  config.rs  error.rs  filter.rs  id.rs  main.rs  state.rs
src/routes/: delete.rs  get.rs  mod.rs  post.rs
template/: 404.html  paste.html  redirect.html  upload.html
